fix copy-paste mistake

--- a/class_meetings/cm09-svm.Rmd
+++ b/class_meetings/cm09-svm.Rmd
@@ -296,7 +296,7 @@ This approach fits an SVM for each category against "other". That's $K$ SVM's in
 2. Fit SVM
 3. Repeat 1-2 for all $K$ choices of $j$.
 
-Classification is made using the "popular vote".
+Remember the measure of "confidence" introduced in 4.3, as the absolute value of the left-hand-side of the equation of the hyperplane? We choose the category that results in the highest confidence score. 
 
 # SVM in python
 
