--- a/class_meetings/cm09-svm.Rmd
+++ b/class_meetings/cm09-svm.Rmd
@@ -240,11 +240,28 @@ tibble(x1 = c(rpois(10,5), 15-rpois(10,5)),
 ```
 
 1. Construct the decision rule according to this classification boundary. How would you classify a new observation that has $x_1=6$ and $x_2=10$?
+
+> If `x1<7.5`, then "A". Else "B". For the above example, since `x1=6<7.5`, we would classify "A".
+
 2. What size is the margin here?
+
+> The margin width is 2 units. 
+
 3. Which observations receive a penalty? Which observations are the support vectors?
+
+> The observations that receive a penalty are 6,7,8,9,10. These are also the support vectors, by definition.
+
 4. What is the total penalty here?
+
+> The penalty, added in order of observations 6-10, is 0.25+0.25+1.25+1.75+2.25 = 5.75.
+
 5. Can I choose a bigger margin if my total allowable penalty is 6?
+
+> Yes -- increasing the margin will eventually lead to an increase in penalty, which is allowable.
+
 6. Are the data separable? If so, what are the support vectors?
+
+> The data are separable -- as such, we can apply a maximal margin classifier to it. The support vectors would be 4,8,9.
 
 # Support Vector Machines
 
