add cm03 exercise

--- a/class_meetings/cm03-model_fitting-r.Rmd
+++ b/class_meetings/cm03-model_fitting-r.Rmd
@@ -3,12 +3,16 @@ title: "Model fitting in R"
 output: html_document
 ---
 
-```{r}
-library(tidyverse)
-head(iris)
-```
+Scratch notes from our in-class activities in Lecture 3. This covers the model-fitting paradigm in R.
 
 ```{r}
+library(tidyverse)
+```
+
+Use the `iris` data to demonstrate. Split into training and test data:
+
+```{r}
+head(iris)
 set.seed(100)
 iris <- mutate(
 	iris, 
