--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "### 4(b) Fundamental tradeoff\n",
     "\n",
-    "How do the bandwidth and $k$ hyperparameters in loess and $k$-NN influence the bias/variance tradeoff? Use two brief sentences."
+    "How do the bandwidth and $k$ hyperparameters in loess and $k$-NN influence the bias/variance tradeoff, or the overfitting/underfitting tradeoff? Use one or two brief sentences."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
